AMPS-191: merge 54422 from trunk, create the URL of the fisheyeboot.jar in a manner which works on windows and Unix
git-svn-id: https://studio.atlassian.com/svn/AMPS/branches/3.0-stable@54425 2c54a935-e501-0410-bc05-97a93f6bca70